review layout class

--- a/css/style2.css
+++ b/css/style2.css
@@ -22,7 +22,7 @@ h5 {
     display: flex;
 }
 
-#sidebar {
+#sidebar-left, #sidebar-right {
     width: 150px;
     height: 500px;
     background-color: #22b925;
