--- a/iffinance/css/style.css
+++ b/iffinance/css/style.css
@@ -1,7 +1,7 @@
 html, body{
     margin: 0;
     padding: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 body{
@@ -27,6 +27,8 @@ header .wrapper{
 
 #logo{
     width: 150px;
+    display: flex;
+    gap: 10px;
 }
 
 #logo h1{
@@ -34,8 +36,39 @@ header .wrapper{
     color: #FFF;
 }
 
-nav{
-    width: 450px;
-    height: 50px;
-    background: #474747;
+#logo h1 span{
+    color: #F19E39;
+}
+
+nav ul{
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    color: #FFF;
+    font-size: 18px;
+}
+
+header nav ul li a{
+    color: #FFF;
+    text-decoration: none;
+    display: block;
+    padding: 30px 20px;
+}
+
+header nav ul li a:hover{
+    color: #cdcdcd;
+    border-bottom: 5px solid #ae7026c7;
+}
+
+.active {
+    border-bottom: 5px solid #F19E39;
+}
+
+.active:hover {
+    border-bottom: 5px solid #F19E39;
+}
+
+
+main{
+    color: #FFF;
 }
